--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,6 +9,4 @@ spring:
         username: postgres
         password: inventario
 
-inventario:
-    cors:
-        origin: http://127.0.0.1:4200
+inventario.cors.origin: http://127.0.0.1:4200
