--- a/src/main/resources/application-heroku.yml
+++ b/src/main/resources/application-heroku.yml
@@ -1,4 +1,3 @@
 # Configuraciones en producción
-inventario:
-    cors:
-        origin: https://inventarios-ng.herokuapp.com/
+server.port: 80
+inventario.cors.origin: https://inventarios-ng.herokuapp.com/
