Corrección en el cors para heroku

--- a/src/main/resources/application-heroku.yml
+++ b/src/main/resources/application-heroku.yml
@@ -1,2 +1,2 @@
 # Configuraciones en producción
-inventario.cors.origin: https://inventarios-ng.herokuapp.com/
+inventario.cors.origin: https://inventarios-ng.herokuapp.com
